adição dos ajustes solicitados
